src/gen/dBaseParser.py
# Generated from dBaseParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class dBaseParser ( Parser ):

    grammarFileName = "dBaseParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "','", "'.'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<='", "'>='", "'!='", "'=='", "'<'", "'>'", "'::'", 
                     "':'", "'='", "'('", "')'", "'+'", "'-'", "'*'", "'/'", 
                     "'{'", "'}'", "';'" ]

    symbolicNames = [ "<INVALID>", "PARAMETER", "WITH", "ENDWITH", "PROGRAM", 
                      "RETURN", "FOR", "TO", "ENDFOR", "STEP", "BREAK", 
                      "DO", "WHILE", "ENDDO", "LOCAL", "NEW", "DELETE", 
                      "SUPER", "CLASS", "ENDCLASS", "OF", "THIS", "METHOD", 
                      "ENDMETHOD", "PROPERTY", "CREATE", "FILE", "IF", "ELSE", 
                      "ENDIF", "WRITE", "CALL", "COMMA", "DOT", "FLOAT", 
                      "NUMBER", "STRING", "LE", "GE", "NE", "EQ", "LT", 
                      "GT", "DCOLON", "COLON", "ASSIGN", "LPAREN", "RPAREN", 
                      "PLUS", "MINUS", "STAR", "SLASH", "LBRACE", "RBRACE", 
                      "SEMI", "BRACKET_STRING", "TRUE", "FALSE", "AND", 
                      "OR", "NOT", "IDENT", "WS", "LINECOMMENT_DBA", "LINECOMMENT_DBB", 
                      "LINECOMMENT_CPP", "BLOCKCOMMENT_START", "COMMENT_NEST_START", 
                      "COMMENT_END", "COMMENT_ANY" ]

    RULE_input = 0
    RULE_item = 1
    RULE_statement = 2
    RULE_createFileStmt = 3
    RULE_handlerList = 4
    RULE_breakStmt = 5
    RULE_returnStmt = 6
    RULE_doStmt = 7
    RULE_doTarget = 8
    RULE_programRef = 9
    RULE_parameterStmt = 10
    RULE_paramNames = 11
    RULE_callExpr = 12
    RULE_doWhileStatement = 13
    RULE_condition = 14
    RULE_logicalOr = 15
    RULE_logicalAnd = 16
    RULE_logicalNot = 17
    RULE_comparison = 18
    RULE_compareOp = 19
    RULE_localDeclStmt = 20
    RULE_localAssignStmt = 21
    RULE_deleteStmt = 22
    RULE_forStmt = 23
    RULE_numberExpr = 24
    RULE_assignStmt = 25
    RULE_lvalue = 26
    RULE_dottedRef = 27
    RULE_exprStmt = 28
    RULE_ifStmt = 29
    RULE_block = 30
    RULE_writeStmt = 31
    RULE_writeArg = 32
    RULE_classDecl = 33
    RULE_classBody = 34
    RULE_classMember = 35
    RULE_withStmt = 36
    RULE_withTarget = 37
    RULE_withBody = 38
    RULE_withAssignStmt = 39
    RULE_withLvalue = 40
    RULE_propertyDecl = 41
    RULE_methodDecl = 42
    RULE_paramList = 43
    RULE_callStmt = 44
    RULE_callTarget = 45
    RULE_qualifiedName = 46
    RULE_argList = 47
    RULE_identifier = 48
    RULE_expr = 49
    RULE_additiveExpr = 50
    RULE_multiplicativeExpr = 51
    RULE_postfixExpr = 52
    RULE_postfixSuffix = 53
    RULE_newExpr = 54
    RULE_memberExpr = 55
    RULE_literal = 56
    RULE_primary = 57

    ruleNames =  [ "input", "item", "statement", "createFileStmt", "handlerList", 
                   "breakStmt", "returnStmt", "doStmt", "doTarget", "programRef", 
                   "parameterStmt", "paramNames", "callExpr", "doWhileStatement", 
                   "condition", "logicalOr", "logicalAnd", "logicalNot", 
                   "comparison", "compareOp", "localDeclStmt", "localAssignStmt", 
                   "deleteStmt", "forStmt", "numberExpr", "assignStmt", 
                   "lvalue", "dottedRef", "exprStmt", "ifStmt", "block", 
                   "writeStmt", "writeArg", "classDecl", "classBody", "classMember", 
                   "withStmt", "withTarget", "withBody", "withAssignStmt", 
                   "withLvalue", "propertyDecl", "methodDecl", "paramList", 
                   "callStmt", "callTarget", "qualifiedName", "argList", 
                   "identifier", "expr", "additiveExpr", "multiplicativeExpr", 
                   "postfixExpr", "postfixSuffix", "newExpr", "memberExpr", 
                   "literal", "primary" ]

    EOF = Token.EOF
    PARAMETER=1
    WITH=2
    ENDWITH=3
    PROGRAM=4
    RETURN=5
    FOR=6
    TO=7
    ENDFOR=8
    STEP=9
    BREAK=10
    DO=11
    WHILE=12
    ENDDO=13
    LOCAL=14
    NEW=15
    DELETE=16
    SUPER=17
    CLASS=18
    ENDCLASS=19
    OF=20
    THIS=21
    METHOD=22
    ENDMETHOD=23
    PROPERTY=24
    CREATE=25
    FILE=26
    IF=27
    ELSE=28
    ENDIF=29
    WRITE=30
    CALL=31
    COMMA=32
    DOT=33
    FLOAT=34
    NUMBER=35
    STRING=36
    LE=37
    GE=38
    NE=39
    EQ=40
    LT=41
    GT=42
    DCOLON=43
    COLON=44
    ASSIGN=45
    LPAREN=46
    RPAREN=47
    PLUS=48
    MINUS=49
    STAR=50
    SLASH=51
    LBRACE=52
    RBRACE=53
    SEMI=54
    BRACKET_STRING=55
    TRUE=56
    FALSE=57
    AND=58
    OR=59
    NOT=60
    IDENT=61
    WS=62
    LINECOMMENT_DBA=63
    LINECOMMENT_DBB=64
    LINECOMMENT_CPP=65
    BLOCKCOMMENT_START=66
    COMMENT_NEST_START=67
    COMMENT_END=68
    COMMENT_ANY=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(dBaseParser.EOF, 0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dBaseParser.ItemContext)
            else:
                return self.getTypedRuleContext(dBaseParser.ItemContext,i)


        def getRuleIndex(self):
            return dBaseParser.RULE_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput" ):
                listener.enterInput(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput" ):
                listener.exitInput(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput" ):
                return visitor.visitInput(self)
            else:
                return visitor.visitChildren(self)




    def input_(self):

        localctx = dBaseParser.InputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2562618680372874342) != 0):
                self.state = 116
                self.item()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(dBaseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecl(self):
            return self.getTypedRuleContext(dBaseParser.ClassDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(dBaseParser.MethodDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(dBaseParser.StatementContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItem" ):
                listener.enterItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItem" ):
                listener.exitItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = dBaseParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_item)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.classDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.methodDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(dBaseParser.IfStmtContext,0)


        def doStmt(self):
            return self.getTypedRuleContext(dBaseParser.DoStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(dBaseParser.BreakStmtContext,0)


        def parameterStmt(self):
            return self.getTypedRuleContext(dBaseParser.ParameterStmtContext,0)


        def writeStmt(self):
            return self.getTypedRuleContext(dBaseParser.WriteStmtContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(dBaseParser.AssignStmtContext,0)


        def createFileStmt(self):
            return self.getTypedRuleContext(dBaseParser.CreateFileStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(dBaseParser.ExprStmtContext,0)


        def localAssignStmt(self):
            return self.getTypedRuleContext(dBaseParser.LocalAssignStmtContext,0)


        def localDeclStmt(self):
            return self.getTypedRuleContext(dBaseParser.LocalDeclStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(dBaseParser.CallStmtContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(dBaseParser.ClassDeclContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(dBaseParser.ForStmtContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(dBaseParser.DoWhileStatementContext,0)


        def deleteStmt(self):
            return self.getTypedRuleContext(dBaseParser.DeleteStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(dBaseParser.ReturnStmtContext,0)


        def withStmt(self):
            return self.getTypedRuleContext(dBaseParser.WithStmtContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = dBaseParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.ifStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.doStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.breakStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.parameterStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 133
                self.writeStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 134
                self.assignStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 135
                self.createFileStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 136
                self.exprStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 137
                self.localAssignStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 138
                self.localDeclStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 139
                self.callStmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 140
                self.classDecl()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 141
                self.forStmt()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 142
                self.doWhileStatement()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 143
                self.deleteStmt()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 144
                self.returnStmt()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 145
                self.withStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateFileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(dBaseParser.CREATE, 0)

        def FILE(self):
            return self.getToken(dBaseParser.FILE, 0)

        def expr(self):
            return self.getTypedRuleContext(dBaseParser.ExprContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_createFileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateFileStmt" ):
                listener.enterCreateFileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateFileStmt" ):
                listener.exitCreateFileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateFileStmt" ):
                return visitor.visitCreateFileStmt(self)
            else:
                return visitor.visitChildren(self)




    def createFileStmt(self):

        localctx = dBaseParser.CreateFileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_createFileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(dBaseParser.CREATE)
            self.state = 149
            self.match(dBaseParser.FILE)
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 150
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HandlerListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(dBaseParser.LBRACE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dBaseParser.ExprContext)
            else:
                return self.getTypedRuleContext(dBaseParser.ExprContext,i)


        def RBRACE(self):
            return self.getToken(dBaseParser.RBRACE, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(dBaseParser.SEMI)
            else:
                return self.getToken(dBaseParser.SEMI, i)

        def getRuleIndex(self):
            return dBaseParser.RULE_handlerList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHandlerList" ):
                listener.enterHandlerList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHandlerList" ):
                listener.exitHandlerList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHandlerList" ):
                return visitor.visitHandlerList(self)
            else:
                return visitor.visitChildren(self)




    def handlerList(self):

        localctx = dBaseParser.HandlerListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_handlerList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(dBaseParser.LBRACE)
            self.state = 154
            self.expr()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==54:
                self.state = 155
                self.match(dBaseParser.SEMI)
                self.state = 156
                self.expr()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(dBaseParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(dBaseParser.BREAK, 0)

        def getRuleIndex(self):
            return dBaseParser.RULE_breakStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStmt" ):
                listener.enterBreakStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStmt" ):
                listener.exitBreakStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)




    def breakStmt(self):

        localctx = dBaseParser.BreakStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_breakStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(dBaseParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(dBaseParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(dBaseParser.ExprContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = dBaseParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(dBaseParser.RETURN)
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 167
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(dBaseParser.DO, 0)

        def doTarget(self):
            return self.getTypedRuleContext(dBaseParser.DoTargetContext,0)


        def WITH(self):
            return self.getToken(dBaseParser.WITH, 0)

        def argList(self):
            return self.getTypedRuleContext(dBaseParser.ArgListContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_doStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoStmt" ):
                listener.enterDoStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoStmt" ):
                listener.exitDoStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoStmt" ):
                return visitor.visitDoStmt(self)
            else:
                return visitor.visitChildren(self)




    def doStmt(self):

        localctx = dBaseParser.DoStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_doStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(dBaseParser.DO)
            self.state = 171
            self.doTarget()
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 172
                self.match(dBaseParser.WITH)
                self.state = 173
                self.argList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoTargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programRef(self):
            return self.getTypedRuleContext(dBaseParser.ProgramRefContext,0)


        def IDENT(self):
            return self.getToken(dBaseParser.IDENT, 0)

        def getRuleIndex(self):
            return dBaseParser.RULE_doTarget

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoTarget" ):
                listener.enterDoTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoTarget" ):
                listener.exitDoTarget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoTarget" ):
                return visitor.visitDoTarget(self)
            else:
                return visitor.visitChildren(self)




    def doTarget(self):

        localctx = dBaseParser.DoTargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_doTarget)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.programRef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.match(dBaseParser.IDENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(dBaseParser.IDENT)
            else:
                return self.getToken(dBaseParser.IDENT, i)

        def DOT(self):
            return self.getToken(dBaseParser.DOT, 0)

        def PROGRAM(self):
            return self.getToken(dBaseParser.PROGRAM, 0)

        def getRuleIndex(self):
            return dBaseParser.RULE_programRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramRef" ):
                listener.enterProgramRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramRef" ):
                listener.exitProgramRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramRef" ):
                return visitor.visitProgramRef(self)
            else:
                return visitor.visitChildren(self)




    def programRef(self):

        localctx = dBaseParser.ProgramRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_programRef)
        self._la = 0 # Token type
        try:
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [61]:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.match(dBaseParser.IDENT)
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==33:
                    self.state = 181
                    self.match(dBaseParser.DOT)
                    self.state = 182
                    self.match(dBaseParser.IDENT)


                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.match(dBaseParser.PROGRAM)
                self.state = 186
                self.match(dBaseParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(dBaseParser.PARAMETER, 0)

        def paramNames(self):
            return self.getTypedRuleContext(dBaseParser.ParamNamesContext,0)


        def getRuleIndex(self):
            return dBaseParser.RULE_parameterStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterStmt" ):
                listener.enterParameterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterStmt" ):
                listener.exitParameterStmt(self)
